add memory to the llm , updated using milvius backend , add test files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,20 @@ CORS_ALLOW_ORIGINS=*
 # ElevenLabs (optional)
 # ELEVEN_API_KEY=sk_b0f16fe3b393826cf2fb802729d3b120774ec1e798449786
 # ELEVEN_VOICE_ID=your_voice_id
+
+# Retrieval and Vector Store
+# RETRIEVAL_ENABLED=true
+# VECTOR_BACKEND=file   # file | chroma | milvus
+# CHROMA_DIR=./backend/data/chroma
+# EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
+# HISTORY_MESSAGES=6
+
+# Milvus (optional)
+# MILVUS_HOST=localhost
+# MILVUS_PORT=19530
+# MILVUS_USER=
+# MILVUS_PASSWORD=
+# MILVUS_DB=
+# MILVUS_COLLECTION=memories
+# MILVUS_INDEX_TYPE=HNSW
+# MILVUS_METRIC_TYPE=IP
