finetuning block added and parsers for whatsapp added

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,3 +37,8 @@ CORS_ALLOW_ORIGINS=*
 # MILVUS_COLLECTION=memories
 # MILVUS_INDEX_TYPE=HNSW
 # MILVUS_METRIC_TYPE=IP
+
+# Finetuning (optional)
+# FINETUNE_ENABLED=false
+# FINETUNE_OUTPUT_DIR=./backend/data/finetune_outputs
+# FINETUNE_DEFAULT_MODEL=mistralai/Mistral-7B-Instruct-v0.2
